Fix overflow problem

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -48,17 +48,13 @@
       @media @mobile {
         width: 60%;
       }
-
-      img {
-        position: relative;
-      }
     }
   }
   .rad-app-content {
     padding: @padding-largest * 2;
     background-color: white;
     text-align: center;
-    position: relative;
+    transform: translateZ(0);
     @media @tablet {
       padding: @padding-larger;
     }
